exports[`radialGradient properly overrides the fallback when it is passed 1`] = `
Object {
  "backgroundColor": "#FFF",
  "backgroundImage": "radial-gradient(farthest-corner at 45px 45px, #00FFFF 0%, rgba(0, 0, 255, 0) 50%, #0000FF 95%)",
}
`;

exports[`radialGradient returns the correct object when only passed two color stops, including parsed fallback with no percentage 1`] = `
Object {
  "backgroundColor": "#fff",
  "backgroundImage": "radial-gradient(#fff, #000)",
}
`;

exports[`radialGradient returns the correct object when passed extent and shape 1`] = `
Object {
  "backgroundColor": "#00FFFF",
  "backgroundImage": "radial-gradient(ellipse farthest-corner at 45px 45px, #00FFFF 0%, rgba(0, 0, 255, 0) 50%, #0000FF 95%)",
}
`;

exports[`radialGradient returns the correct object when passed extent, shape, and position, including parsed fallback with percentage 1`] = `
Object {
  "backgroundColor": "#00FFFF",
  "backgroundImage": "radial-gradient(center ellipse farthest-corner at 45px 45px, #00FFFF 0%, rgba(0, 0, 255, 0) 50%, #0000FF 95%)",
}
`;

exports[`radialGradient returns the correct object when passed just extent 1`] = `
Object {
  "backgroundColor": "#00FFFF",
  "backgroundImage": "radial-gradient(farthest-corner at 45px 45px, #00FFFF 0%, rgba(0, 0, 255, 0) 50%, #0000FF 95%)",
}
`;
